회원가입 결과 , 각종화면

--- a/WebContent/style/bootstrap.css
+++ b/WebContent/style/bootstrap.css
@@ -374,8 +374,9 @@ th {
 	background-color:#2f2d2d;
 	text-align:left;
     clear: both;
-    width: 1263px;
+    width: 100%;
     margin: 100 0 0 0;
+    border-top-width: 40px;
     padding-top: 15px;
     display: table;
 }
