--- a/WebContent/style/bootstrap.css
+++ b/WebContent/style/bootstrap.css
@@ -371,6 +371,7 @@ th {
 /** 푸터*/
 #footer dl.footInfo {
 	color :#fff;
+	font-family:hy강m;
 	background-color:#2f2d2d;
 	text-align:left;
     clear: both;
@@ -381,6 +382,12 @@ th {
     display: table;
 }
 
+/** 이미지보더*/
+.imageborder{
+	border-style: solid;
+    border-color: silver;
+    border-width: 1;
+}
 
 .glyphicon-asterisk:before {
   content: "\2a";
