--- a/WebContent/style/bootstrap.css
+++ b/WebContent/style/bootstrap.css
@@ -4735,10 +4735,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color:  #d9534f;
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid d43f3a;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
