--- a/WebContent/style/bootstrap.css
+++ b/WebContent/style/bootstrap.css
@@ -377,6 +377,7 @@ th {
 	text-align:left;
     clear: both;
     width: 100%;
+    height: 150px;
     margin: 100 0 0 0;
     border-top-width: 40px;
     padding-top: 15px;
