--- a/WebContent/style/bootstrap.css
+++ b/WebContent/style/bootstrap.css
@@ -2169,7 +2169,7 @@ pre code {
     margin-left: 25%;
   }
   .col-md-offset-2 {
-    margin-left: 16.66666667%;
+    margin-left: 18.666667%;
   }
   .col-md-offset-1 {
     margin-left: 8.33333333%;
